Restructure and allow global

--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "relativefiction",
   "version": "2.0.0",
   "description": "Localised storytelling",
-  "main": "relativefiction.js",
+  "main": "start.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/FilipNest/localstories.git"
+  },
+  "bin": {
+    "relativefiction": "launch.js"
   },
   "keywords": [
     "fictioh",
