--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "express": "^4.15.2",
     "handlebars": "^4.0.8",
     "moment": "^2.18.1",
-    "promised-handlebars": "^2.0.1",
-    "request": "^2.81.0"
+    "pixl-xml": "^1.0.10",
+    "request": "^2.81.0",
   }
 }
